--- a/src/main/resources/META-INF/resources/index.xhtml
+++ b/src/main/resources/META-INF/resources/index.xhtml
@@ -9,7 +9,8 @@
 
 	<ui:define name="body">
 		<p:inputText value="#{homeBean.searchCriteria}" />
-		<p:commandButton value="Search" action="#{homeController.searchAction}" process="@form" update="@form" />
+		<p:commandButton value="Search Single" action="#{homeController.searchSingleAction}" process="@form" update="@form" />
+		<p:commandButton value="Search A-Z" action="#{homeController.searchAction}" process="@form" update="@form" />
 
 		<p:dataTable var="searchResult" value="#{homeBean.searchResults}" >
 			<p:column headerText="Result">
